[package]
name = "rd"
version = "0.1.0"
authors = ["Daniele D'Orazio <daniele@develer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
image = "0.24"
rand = "0.8"
